--- a/style.css
+++ b/style.css
@@ -88,13 +88,13 @@ body {
   transition: opacity 0.3s ease-in 0.4s;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 700px) {
   .container {
-    width: 100vw;
+    width: 90vw;
   }
 
-  .panel:nth-of-type(4),
-  .panel:nth-of-type(5) {
-    display: none;
+  .panel:nth-of-type(5),
+  .panel:nth-of-type(2) {
+    display:contents;
   }
 }
